--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,8 @@
 #   go-tests = true
 #   unused-packages = true
 
+[metadata.heroku]
+  root-package = "github.com/dbrucewong/go-deploy
 
 [prune]
   go-tests = true
