--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,7 +25,9 @@
 #   unused-packages = true
 
 [metadata.heroku]
-  root-package = "github.com/dbrucewong/go-deploy
+  root-package = "github.com/dbrucewong/go-deploy"
+  go-version = "1.12.6"
+  install = ["./..."]
 
 [prune]
   go-tests = true
