--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 [metadata.heroku]
   root-package = "github.com/dbrucewong/go-deploy"
   go-version = "1.12.6"
-  install = ["./..."]
+  install = ["./.."]
   ensure = "false"
 
 [prune]
