--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,8 +27,8 @@
 [metadata.heroku]
   root-package = "github.com/dbrucewong/go-deploy"
   go-version = "1.12.6"
-  install = ["./.."]
-  ensure = "true"
+  install = ["./..."]
+  ensure = "false"
 
 [prune]
   go-tests = true
