--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,7 +28,7 @@
   root-package = "github.com/dbrucewong/go-deploy"
   go-version = "1.12.6"
   install = ["./..."]
-  ensure = "false"
+  ensure = "true"
 
 [prune]
   go-tests = true
